# Scrabble-projekt-C-

./: CMakeLists.txt  Makefile  README.md
include/project/: Dawg.h  Kaik.h  Konstandid.h  Kontrollija.h  Kott.h  Kuna.h  Laud.cpp  Laud.h  Mang.h  Mangija.h  Nupp.h  Ruut.h  Scrabble.h
src/: Dawg.cpp  Kaik.cpp  Kontrollija.cpp  Kott.cpp  Kuna.cpp  Laud.cpp  Mang.cpp  Mangija.cpp  Nupp.cpp  Ruut.cpp  Scrabble.cpp
